implementation of EnemyActionPort as well as bagging of implementation of CommandPort